# EntropySimulation

./: CMakeLists.txt  README.md
include/: globals.h
include/core/: map.h  simulation.h
include/renderer/: renderer.h
src/: globals.cpp  main.cpp
src/core/: map.cpp  simulation.cpp
src/renderer/: renderer.cpp
